# table-rs

./: .bumpversion.toml  Cargo.toml  DIOXUS.md  README.md  YEW.md
bench/next-js/: README.md  package-lock.json  package.json
bench/next-js/app/: page.js
bench/yew/: Cargo.toml  README.md  index.html  tailwind.config.js
bench/yew/src/pages/: landing.rs
examples/dioxus/: Cargo.toml  Dioxus.toml  README.md
examples/dioxus/src/: main.rs
examples/yew/: Cargo.toml  README.md  index.html
examples/yew/src/pages/: landing.rs
src/: dioxus.rs  lib.rs  yew.rs
src/dioxus/: body.rs  controls.rs  header.rs  table.rs  types.rs
src/yew/: body.rs  controls.rs  header.rs  table.rs  types.rs
